# imagecodecs-zarr3

./: README.md  pyproject.toml
src/imagecodecs_zarr3/: __init__.py
